# generating_text

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/api/blog/: make_data.py
src/api/config/: settings.py
