[tool.poetry]
name = "srv"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
django-debug-toolbar = "^2.0"
janome = "^0.3.9"
faker = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
